// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`genFeatureTypes > should generate correct TypeScript output for browser > index.d.ts 1`] = `
"// DO NOT EDIT THIS FILE. IT IS GENERATED BY THE BUCKET CLI AND WILL BE OVERWRITTEN.

export const generatedFeatures: string[];
export interface GeneratedFeatureTypes {
  feature1: {
    key: "feature1", 
    access: true, 
    config: undefined
  }, 
  feature2: {
    key: "feature2", 
    access: false, 
    config: string
  }, 
  feature3: {
    key: "feature3", 
    access: true, 
    config: {
      aiModel: string, 
      prompt: {
        text: string, 
        cheekyFactor: number
      }
    }
  }
}"
`;

exports[`genFeatureTypes > should generate correct TypeScript output for browser > index.d.ts 2`] = `
"// DO NOT EDIT THIS FILE. IT IS GENERATED BY THE BUCKET CLI AND WILL BE OVERWRITTEN.

export const generatedFeatures = [
  {
    key: "feature1", 
    access: true, 
    config: undefined
  }, 
  {
    key: "feature2", 
    access: false, 
    config: "string"
  }, 
  {
    key: "feature3", 
    access: true, 
    config: {
      aiModel: "string", 
      prompt: {
        text: "string", 
        cheekyFactor: "number"
      }
    }
  }
];"
`;

exports[`genFeatureTypes > should generate correct TypeScript output for browser > index.d.ts 3`] = `
"{
  "name": "_bucket",
  "version": "1.0.0",
  "description": "Autogenerated package for typed features for Bucket",
  "main": "index.js",
  "types": "index.d.ts",
  "exports": {
    ".": {
      "import": "./index.js",
      "types": "./index.d.ts"
    }
  }
}"
`;
